--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </head>
   <body>
     
+<!--Cabeçalho-->
     <header>
       <nav class="navbar navbar-expand-sm navbar-light bg-warning">
         <div class="container">
@@ -30,11 +31,16 @@
 
           <div class="collapse navbar-collapse" id="nav-target">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item justify-content-center d-flex"><a class="nav-link" href="#">Home</a></li>
-              <li class="nav-item justify-content-center d-flex"><a class="nav-link" href="#">Recursos</a></li>
-              <li class="nav-item justify-content-center d-flex"><a class="nav-link" href="#">Benefícios</a></li>
-              <li class="nav-item justify-content-center d-flex"><a class="nav-link" href="#">Preço</a></li>
-              <li class="nav-item justify-content-center d-flex"><a class="btn btn-outline-light btn-block ml-sm-4" href="#">Entrar</a></li>
+              <li class="nav-item justify-content-center d-flex">
+                <a class="nav-link" href="#home">Home</a></li>
+              <li class="nav-item justify-content-center d-flex">
+                <a class="nav-link" href="#recursos">Recursos</a></li>
+              <li class="nav-item justify-content-center d-flex">
+                <a class="nav-link" href="#beneficios">Benefícios</a></li>
+              <li class="nav-item justify-content-center d-flex">
+                <a class="nav-link" href="#precos">Preço</a></li>
+              <li class="nav-item justify-content-center d-flex">
+                <a class="btn btn-outline-light btn-block ml-sm-3" href="#">Entrar</a></li>
             </ul>
           </div>
 
@@ -42,6 +48,7 @@
       </nav>
     </header>
 
+<!--Seção Home-->
     <section id="home">
       <div class="container">
         <div class="row">
@@ -73,6 +80,110 @@
         </div>
       </div>
     </section>
+
+<!-- Seção saiba-->    
+    <section id="recursos" class="caixa">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 d-flex">
+            <div class="align-self-center mb-md-0 mb-5">
+              <h2>Saiba para onde vai o seu dinheiro</h2>
+              <p>
+                Com o Finans, você categoriza todos os seus lançamentos.
+                Com gráficos simples, você sabe de onde vem e para onde vai o seu dinheiro.
+              </p>
+              <a href="#" class="btn btn-primary">Veja mais</a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <img src="img/saiba.png" class="img-fluid" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+
+<!--Seção Juros-->
+    <section id="beneficios" class="caixa">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6">
+            <img src="img/juros.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-sm-6 d-flex">
+            <div class="align-self-center mt-5 mt-sm-0">
+              <h2>Pare de pagar juros e economize</h2>
+              <p>
+                Manter as contas em dia é sempre um problema? O finans avisa você: receba alertas de contas a pagar e a receber!
+              </p>
+              <a href="#" class="btn btn-primary">Veja mais</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+<!--Seção Recursos-->
+    <section id="precos" class="caixa">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-md-4 col-sm-6">
+            <img src="img/facil.png" class="img-fluid">
+            <h4>Fácil de usar</h4>
+            <p>
+              O Finans vai além do básico e permite que você faça controles incríves, essencais para suas finaças. Simples como tem que ser!
+            </p>
+          </div>
+
+          <div class="col-md-4 col-sm-6">
+            <img src="img/economize.png" class="img-fluid">
+            <h4>Economize seu tempo</h4>
+            <p>
+              Tempo é dinheiro! Em segundos, você tem tudo sob controle e aproveite seu tempo com o que realmente importa pra você!
+            </p>
+          </div>
+
+          <div class="col-md-4">
+            <img src="img/suporte.png" class="img-fluid">
+            <h4>Suporte amigo</h4>
+            <p>
+              Dúvidas? Perguntas? Nosso suporte super legal ajuda você! A gente tá aqui pra resolver seus problemas e deixar sua vida bem mais fácil!
+            </p>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+<!--Rodapé-->
+    <footer class="mt-4 mb-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <p>
+              <a href="#home">Home</a>
+              <a href="#recursos">Recursos</a>
+              <a href="#beneficios">Benefícios</a>
+              <a href="#precos">Preços</a>
+            </p>
+          </div>
+          <div id="xablau" class="col-md-4 d-flex justify-content-end">
+            <a href="" class="btn btn-outline-secondary ml-2">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="" class="btn btn-outline-secondary ml-2">
+              <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="" class="btn btn-outline-secondary ml-2">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="" class="btn btn-outline-secondary ml-2">
+              <i class="fa-brands fa-github"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
